Bug 352349 - Cannot drag&drop application to another desktop using pager
Summary: Cannot drag&drop application to another desktop using pager
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: 5.4.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-06 13:33 UTC by honzulak1
Modified: 2015-09-06 19:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments
reproducer (878.88 KB, image/png)
2015-09-06 13:34 UTC, honzulak1
Details

Note You need to log in before you can comment on or make changes to this bug.
Description honzulak1 2015-09-06 13:33:38 UTC
In KDE4 it was possible to move an application to another desktop by dragging the application from taskbar and dropping it above the desktop of my choice on pager. This doesn't seem to work any more.

Reproducible: Always

Steps to Reproduce:
1. configure 2 or more desktops
2. start an application on desktop #1
3. drag the application from taskbar and drop it to pager's desktop #2

Actual Results:  
A new application icon is created on the panel

Expected Results:  
The application is moved to desktop #2
Comment 1 honzulak1 2015-09-06 13:34:09 UTC
Created attachment 94427 [details]
reproducer
Comment 2 Kai Uwe Broulik 2015-09-06 18:52:22 UTC
Git commit b80bd0f74e12241458dba3f366b4c7e6c051f0cc by Kai Uwe Broulik.
Committed on 06/09/2015 at 18:50.
Pushed by broulik into branch 'Plasma/5.4'.

Support dropping task manager entries onto the pager

Also add preventStealing so hovering the pager won't cause the panel to make room
for a drop, shifting the pager around.
FIXED-IN: 5.4.2
REVIEW: 125073

M  +2    -0    applets/pager/package/contents/ui/main.qml
M  +15   -0    applets/pager/plugin/pager.cpp
M  +1    -0    applets/pager/plugin/pager.h

http://commits.kde.org/plasma-desktop/b80bd0f74e12241458dba3f366b4c7e6c051f0cc
Comment 3 honzulak1 2015-09-06 19:10:31 UTC
Wow, that was fast! Thank you.