Support dropping task manager entries onto the pager

Also add preventStealing so hovering the pager won't cause the panel to make room
for a drop, shifting the pager around.

BUG: 352349
FIXED-IN: 5.4.2
REVIEW: 125073